# my_sfml_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: light_shader.frag
include/: game.hpp  menu.hpp  random_generator.hpp  walker.hpp
src/: game.cpp  main.cpp  menu.cpp  random_generator.cpp  walker.cpp
